<resources>
    <string name="app_name" translatable="false">FastInt</string>
    <string name="Algorithms" translatable="true">Algorithms</string>
    <string name="News" translatable="true">News</string>
    <string name="Themes" translatable="true">Themes</string>
    <string name="Tasks" translatable="true">Tasks</string>
    <string name="EnterLogin">Enter login</string>
    <string name="EnterPassword">Enter password</string>
    <string name="EnterEmail">Enter e-mail</string>
    <string name="Authorization">Authorization</string>
    <string name="Registration">Registration</string>
    <string name="NextPage">Next page</string>
    <string name="EnterName">Enter a name</string>
    <string name="EnterSurname">Enter a surname</string>
    <string name="CTNewPassword">Confirm the new password</string>
    <string name="Class">Select a class</string>
    <string name="Teacher">Teacher</string>
    <string name="Student">Student</string>
    <string name="FatherName">Enter father name</string>
    <string name="Library">Library</string>
    <string name="Tests">Tests</string>
    <string name="Profile">Profile</string>
    <string name="NotSU_SI">Login or password fields cannot be blank</string>
    <string name="AlgSort">Sorting algorithms</string>
    <string name="Mistake">Mistake</string>
    <string name="S_Out">Sign out</string>
    <string name="VSOSH" translatable="false">08.04.24 ученик 97 лицея г.Челябинска Блиновских Трофим Алексеевич вошел в 20 лучших по итогу первого дня заключительного этапа ВСОШ (среди учеников 9 класса). Удачи во второй день, Трофим!</string>
    <string name="Graphs">Graphs</string>
    <string name="User_Info">User Information</string>
    <string name="segTree">Segment tree</string>
</resources>