<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="0"
    android:padding="0dp" >

    <EditText
        android:id="@+id/newLogin"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="65dp"
        android:autofillHints=""
        android:hint="@string/EnterLogin"
        android:inputType="textEmailAddress"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SUFapp_name" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="65dp"
        android:autofillHints=""
        android:hint="@string/EnterPassword"
        android:inputType="textPassword"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newLogin" />

    <TextView
        android:id="@+id/SUFapp_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:orientation="horizontal"
        android:text="@string/app_name"
        android:textColor="@color/app_color"
        android:textSize="80sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/newLogin"
        tools:layout_editor_absoluteX="10dp" />

    <Button
        android:id="@+id/NextPageButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="30dp"
        android:onClick="startSU2"
        android:text="@string/NextPage"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/CNewPassword" />

    <EditText
        android:id="@+id/CNewPassword"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="65dp"
        android:hint="@string/CTNewPassword"
        android:inputType="textPassword"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPassword"
        android:autofillHints="" />


</androidx.constraintlayout.widget.ConstraintLayout>