<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="0"
    android:padding="0dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/SignInLogin"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="65dp"
        android:autofillHints=""
        android:hint="@string/EnterLogin"
        android:inputType="textEmailAddress"
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toTopOf="@+id/SignInPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SUFapp_name"
        app:layout_constraintVertical_bias="0.648" />

    <EditText
        android:id="@+id/SignInPassword"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="65dp"
        android:autofillHints=""
        android:hint="@string/EnterPassword"
        android:inputType="textPassword"
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toTopOf="@+id/loginBTN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.726" />

    <Button
        android:id="@+id/loginBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="40dp"
        android:text="@string/Authorization"
        app:layout_constraintBottom_toTopOf="@+id/RegButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/RegButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="620dp"
        android:layout_marginEnd="30dp"
        android:onClick="startSU"
        android:text="@string/Registration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/SUFapp_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:orientation="horizontal"
        android:text="@string/app_name"
        android:textColor="@color/app_color"
        android:textSize="80sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>